Mon Jan 16 09:01:20 UTC 2012  Martin Corino  <mcorino@remedy.nl>

        * ace/config-win32-mingw.h:
          Fixed incorrectly placed macro test.

Sun Jan 15 19:15:48 UTC 2012  Martin Corino  <mcorino@remedy.nl>

        * ace/config-win32-mingw.h:
          Add some customizations and corrections to support using
          --std=c++0x with MinGW32.

Fri Jan 13 23:25:59 UTC 2012  Jeff Parsons <j.parsons@vanderbilt.edu>

        * THANKS:

          Added Michael Frommberger <michael dot frommberger at gmx dot net>

Wed Jan 11 20:43:47 UTC 2012  Martin Corino  <mcorino@remedy.nl>

        * ace/config-freebsd.h:
        * ace/config-win32-common.h:
        * ace/config-win32-mingw.h:
        * ace/os_include/os_signal.h:
          Added ACE_LACKS_SIGSET_T to be able to distinguish between the
          type and the functions being provided or not.

Wed Jan 11 18:43:50 UTC 2012  Martin Corino  <mcorino@remedy.nl>

        * ace/config-win32-mingw.h:
          Fixed typo.

Wed Jan 11 15:41:00 UTC 2012  Simon Massey  <simon dot massey at prismtech dot com>

        * ace/config-sunos5.10.h:
        Is supposed to define ACE_SIZE_T_FORMAT_SPECIFIER_ASCII and ACE_SSIZE_T_FORMAT_SPECIFIER_ASCII
        correctly for this platform. The old logic was "If already defined - redefine, but if not
        defined don't define" and wrong. The point of providing the definition of these SIZE_T format
        specifiers is to provide them if they are not set.

Wed Jan 11 14:36:43 UTC 2012  Martin Corino  <mcorino@remedy.nl>

        * ace/config-win32-mingw.h:
        * ace/os_include/os_signal.h:
          Changes to support MinGW64 compiler.

Mon Jan  9 11:07:54 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Netlink_Addr.h:
        * ace/Notification_Queue.h:
          Doxygen fixes

        * tests/run_test.lst:
          Removed several old config labels

Fri Jan  6 11:16:03 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
