@@ -1,3 +1,10 @@
+Mon Jan 16 10:33:37 UTC 2012  Martin Corino  <mcorino@remedy.nl>
+
+        * ace/config-win32-common.h:
+        * ace/config-win32-mingw.h:
+          Moved MinGW specific block to common because the macros
+          it concerns are tested there already.
+
 Mon Jan 16 09:01:20 UTC 2012  Martin Corino  <mcorino@remedy.nl>
 
         * ace/config-win32-mingw.h:
